<resources>
    <string name="app_name">날씨 및 생활지수</string>
    <string name="address">주소</string>
    <string name="exaddress">ex)서울 영등포구 문래동</string>
    <string name="nowFcst">현재날씨</string>
    <string name="timeFcst">시간대별 예보</string>
    <string name="weekFcst">주간 예보</string>
    <string name="time">%s시</string>
    <string name="date">%s.%s</string>
    <string name="tempUnit">%s℃</string>
    <string name="rainUnit">%s</string>
    <string name="perUnit">%s%%</string>
    <string name="windUnit">%sm/s</string>
    <string name="nowRainUnit">강수량 : %s</string>
    <string name="nowWetUnit">습도 : %s%%</string>
    <string name="nowWindUnit">풍속 : %s %sm/s</string>
    <string name="am">오전</string>
    <string name="pm">오후</string>
    <string name="N">북</string>
    <string name="NNE">북북동</string>
    <string name="NE">북동</string>
    <string name="ENE">동북동</string>
    <string name="E">동</string>
    <string name="ESE">동남동</string>
    <string name="SE">남동</string>
    <string name="SSE">남남동</string>
    <string name="S">남</string>
    <string name="SSW">남남서</string>
    <string name="SW">남서</string>
    <string name="WSW">서남서</string>
    <string name="W">서</string>
    <string name="WNW">서북서</string>
    <string name="NW">북서</string>
    <string name="NNW">북북서</string>
    <string name="sun">맑음</string>
    <string name="manycloud">구름많음</string>
    <string name="cloud">흐림</string>
    <string name="APPLICATION_ERROR">어플리케이션 에러</string>
    <string name="DB_ERROR">데이터베이스 에러</string>
    <string name="NODATA_ERROR">데이터없음 에러</string>
    <string name="HTTP_ERROR">HTTP 에러</string>
    <string name="SERVICETIME_OUT">서비스 연결실 에러</string>
    <string name="INVALID_REQUEST_PARAMETER_ERROR">잘못된 요청 파라메터 에러</string>
    <string name="NO_MANDATORY_REQUEST_PARAMETERS_ERROR">필수요청 파라메터가 없음</string>
    <string name="NO_OPENAPI_SERVICE_ERROR">해당 오픈 API서비스가 없거나 폐기됨</string>
    <string name="SERVICE_ACCESS_DENIED_ERROR">서비스 접근거부</string>
    <string name="TEMPORARILY_DISABLE_THE_SERVICEKEY_ERROR">일시적으로 사용할 수 없는 서비스 키</string>
    <string name="LIMITED_NUMBER_OF_SERVICE_REQUESTS_EXCEEDS_ERROR">서비스 요청제한횟수 초과에러</string>
    <string name="SERVICE_KEY_IS_NOT_REGISTERED_ERROR">등록되지 않은 서비스키</string>
    <string name="DEADLINE_HAS_EXPIRED_ERROR">기한만료된 서비스키</string>
    <string name="UNREGISTERED_IP_ERROR">등록되지 않은 IP</string>
    <string name="UNSIGNED_CALL_ERROR">서명되지 않은 호출</string>
    <string name="UNKNOWN_ERROR">기타에러</string>
    <string name="UNKNOWN_ADDRESS">주소를 찾을 수 없습니다</string>
    <string name="NUM0">0</string>
    <string name="NUM1">1</string>
    <string name="NUM2">2</string>
    <string name="NUM3">3</string>
    <string name="NUM4">4</string>
    <string name="NUM5">5</string>
    <string name="NUM6">6</string>
    <string name="NUM7">7</string>
    <string name="NUM8">8</string>
    <string name="NUM9">9</string>
    <string name="NUM10">10</string>
    <string name="NUM11">11</string>
    <string name="NUM12">12</string>
    <string name="NUM13">13</string>
    <string name="NUM14">14</string>
    <string name="NUM15">15</string>
    <string name="NUM16">16</string>
    <string name="NUM17">17</string>
    <string name="NUM18">18</string>
    <string name="NUM19">19</string>
    <string name="NUM20">20</string>
    <string name="imageLoadFail">이미지를 찾을 수 없습니다.</string>
    <string name="weekDate">%s.%s(%s)</string>
    <string name="land1">서울특별시</string>
    <string name="land2">인천광역시</string>
    <string name="land3">경기도</string>
    <string name="land4">강원도</string>
    <string name="land5">대전광역시</string>
    <string name="land6">세종특별자치시</string>
    <string name="land7">충청남도</string>
    <string name="land8">충청북도</string>
    <string name="land9">광주광역시</string>
    <string name="land10">전라남도</string>
    <string name="land11">전라북도</string>
    <string name="land12">대구광역시</string>
    <string name="land13">경상북도</string>
    <string name="land14">부산광역시</string>
    <string name="land15">울산광역시</string>
    <string name="land16">경상남도</string>
    <string name="landCode1">11B00000</string>
    <string name="landCode2">11D10000</string>
    <string name="landCode3">11C20000</string>
    <string name="landCode4">11C10000</string>
    <string name="landCode5">11F20000</string>
    <string name="landCode6">11F10000</string>
    <string name="landCode7">11H10000</string>
    <string name="landCode8">11H20000</string>
    <string name="landCode9">11G0000</string>
    <string name="sunday">일</string>
    <string name="monday">월</string>
    <string name="tuesday">화</string>
    <string name="wednesday">수</string>
    <string name="thursday">목</string>
    <string name="friday">금</string>
    <string name="saturday">토</string>
    <string name="grade1">좋음</string>
    <string name="grade2">보통</string>
    <string name="grade3">나쁨</string>
    <string name="grade4">매우나쁨</string>
    <string name="stationTime">측정시간 : %s</string>
    <string name="rltmStation">측정소 : %s</string>
    <string name="concentration">농도 : %s</string>
    <string name="grade">등급 : %s</string>
    <string name="flag">플래그 : %s</string>
    <string name="rltmUnit1">%s ㎍/㎥</string>
    <string name="rltmUnit2">%s ppm</string>
    <string name="airQualityTitle">대기질 예보</string>
    <string name="dateAndCode">%s(%s)</string>
    
    <string-array name="rltmData">
        <item>통합 대기</item>
        <item>초미세먼지</item>
        <item>미세먼지</item>
        <item>오존</item>
        <item>일산화탄소</item>
        <item>이산화질소</item>
        <item>아황산가스</item>
    </string-array>
</resources>