<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/nowFcstTitleTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnSpan="6"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/nowFcst"
                android:textSize="@dimen/FcstTitle" />

            <LinearLayout
                android:id="@+id/nowFcstLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/nowFcstTitleTV">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/nowFcstIV"
                        android:layout_width="130dp"
                        android:layout_height="130dp"
                        android:layout_rowSpan="3"
                        android:layout_columnSpan="3"
                        android:layout_centerInParent="true"
                        android:layout_gravity="center" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/nowTempTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_rowSpan="2"
                        android:layout_columnSpan="3"
                        android:layout_centerHorizontal="true"
                        android:layout_gravity="center"
                        android:textSize="@dimen/NowTempTV" />

                    <TextView
                        android:id="@+id/nowFcstTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_columnSpan="3"
                        android:layout_below="@+id/nowTempTV"
                        android:layout_centerHorizontal="true"
                        android:gravity="center"
                        android:textSize="@dimen/NowFcstTV" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/nowWetRainWindLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nowFcstLayout"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/nowWetTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/NowWetRainWindLayout" />

                <TextView
                    android:id="@+id/nowRainTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/NowWetRainWindLayout" />

                <TextView
                    android:id="@+id/nowWindTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/NowWetRainWindLayout" />
            </LinearLayout>

            <ImageView
                android:id="@+id/now_dot_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nowWetRainWindLayout"
                android:src="@drawable/dotted_line_long" />

            <TextView
                android:id="@+id/timeFcstTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/now_dot_line"
                android:layout_marginLeft="14dp"
                android:text="@string/timeFcst"
                android:textSize="@dimen/FcstRvTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/timeFcstRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/timeFcstTV" />

            <ImageView
                android:id="@+id/time_dot_line"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/timeFcstRV"
                android:src="@drawable/dotted_line_long" />

            <TextView
                android:id="@+id/weekFcstTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/time_dot_line"
                android:layout_marginLeft="14dp"
                android:text="@string/weekFcst"
                android:textSize="@dimen/FcstRvTitle" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/weekFcstRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/weekFcstTV" />
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>